--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/addtowishlist.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/addtowishlist.phtml
@@ -57,7 +57,6 @@ $uniqueId = '_' . uniqid();
                     this.currentWishListItem = this.$store.wishlist.wishlistItems.find(
                         item => item.product_sku === productSku
                     );
-                    console.log(this.$store.wishlist.wishlistItems);
                 }, 0);
 
                 this.$watch("selectedAttributes", () => {
@@ -133,7 +132,7 @@ $uniqueId = '_' . uniqid();
                     if (response.redirected && response.url.includes('/customer/account/login')) {
                         window.location.href = response.url;
                     } else if (response.ok) {
-                        console.log(response.json());
+                        return response.json();
                     } else {
                         typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
                             [{
@@ -146,18 +145,9 @@ $uniqueId = '_' . uniqid();
                     if (!response) {
                         return;
                     }
-                    typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
-                        [{
-                            type: (response.success) ? "success" : "error",
-                            text: (response.success)
-                                ? "<?= $escaper->escapeHtml(
-                                    __("%1 has been added to your Wish List.", __("Product"))
-                                ) ?>"
-                                : response.error_message
-                        }], 5000
-                    );
-                    const reloadCustomerDataEvent = new CustomEvent("reload-customer-section-data");
-                    window.dispatchEvent(reloadCustomerDataEvent);
+                    this.currentWishListItem = response.item;
+                    this.$store.wishlist.setWishlistItems([response.item, ...this.$store.wishlist.wishlistItems]);
+                    this.$store.wishlist.showWishlist();
                 }).catch((error) => {
                     typeof window.dispatchMessages !== "undefined" && window.dispatchMessages(
                         [{
