--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -5,6 +5,7 @@
 @import "content-type/_image-banner.style.less";
 @import "content-type/_collage.style.less";
 @import "content-type/_category.style.less";
+@import "content-type/_rich-text.style.less";
 
 .content-wrapper {
   padding-left: 16px;
