INTERNAL-32: Implement FAQ content type

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -6,6 +6,7 @@
 @import "content-type/_collage.style.less";
 @import "content-type/_category.style.less";
 @import "content-type/_rich-text.style.less";
+@import "content-type/_faq.style.less";
 
 .content-wrapper {
   padding-left: 16px;
