--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -7,8 +7,9 @@
 @import "content-type/_category.style.less";
 @import "content-type/_rich-text.style.less";
 @import "content-type/_faq.style.less";
+@import "content-type/_quotes.style.less";
 
-.content-wrapper {
+.pagebuilder-content-type .content-wrapper {
   padding-left: 16px;
   padding-right: 16px;
   width: 100%;
