--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -8,6 +8,7 @@
 @import "content-type/_rich-text.style.less";
 @import "content-type/_faq.style.less";
 @import "content-type/_quotes.style.less";
+@import "content-type/_slideshow.style.less";
 
 .pagebuilder-content-type .content-wrapper {
   padding-left: 16px;
