--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/login.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/login.phtml
@@ -24,7 +24,7 @@ $errorMessage = $block->getErrorMessage();
 $successMessage = $block->getSuccessMessage();
 
 ?>
-<div class="container mx-auto flex h-full items-center px-5" x-data="Object.assign(Form, Authentication)">
+<div class="container mx-auto flex h-full items-center px-5" x-data="Object.assign(Form('customer-login-form'), Authentication)">
     <div class="mx-auto w-[412px] max-w-full mb-16">
         <header class="flex items-center justify-between sm:text-center mb-7">
             <h2 class="w-full text-2xl"><?= __('Login') ?></h2>
@@ -38,9 +38,10 @@ $successMessage = $block->getSuccessMessage();
                 const $form = $event.target;
                 <?= $recaptcha ? $escaper->escapeHtmlAttr($recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_LOGIN)) : '' ?>
                 if (this.errors === 0) {
-                    this.submitForm($event);
+                    this.submitForm();
                 }
             }"
+            id="customer-login-form"
         >
             <?= $block->getBlockHtml('formkey') ?>
 
