--- a/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/templates/advanced/form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/templates/advanced/form.phtml
@@ -20,7 +20,8 @@ $maxQueryLength = $catalogSearchHelper->getMaxQueryLength();
 
         <form method="get"
               action="<?= $escaper->escapeUrl($block->getSearchPostUrl()) ?>"
-              x-data="Form"
+              x-data="Form('advanced-search-form')"
+              id="advanced-search-form"
               @submit.prevent="submitForm"
         >
             <div class="flex flex-col gap-3">
