--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/wishlist/wishlist-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/wishlist/wishlist-items.phtml
@@ -45,7 +45,7 @@ $mixBackground = true;
               </div>
             </template>
           </div>
-          <div class="flex min-w-0 flex-col items-stretch justify-center gap-5">
+          <div class="flex min-w-0 flex-col items-stretch justify-center gap-5 z-10">
             <div class="w-full">
               <h2 class="text-md text-text-500">
                 <span x-text="item.product_name"></span>
