--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-items.phtml
@@ -32,42 +32,45 @@ if (!$menuItems) {
 ?>
 <div
     class="menu__level"
-    :class="
-    {
-      'menu__level--current': history[history.length - 1] === '<?= $id ?>',
-      'menu__level--visible': history.includes('<?= $id ?>'),
-      'menu__level--same-depth': <?= $level ?> <= delayedLevel
-    }
-  "
+    :class="{
+        'menu__level--current': history[history.length - 1] === '<?= $id ?>',
+        'menu__level--visible': history.includes('<?= $id ?>'),
+        'menu__level--same-depth': <?= $level ?> <= delayedLevel
+    }"
+    :inert="!history.includes('<?= $id ?>')"
+    data-menu-level="<?= $id ?>"
+
 >
     <div class="menu__header">
-        <div class="menu__header-container">
-
+        <div class="menu__header-container p-2">
             <?php if ($id === 'all'): ?>
                 <template x-if="!$store.main.isMobile">
                     <button
                         @click="$store.resizable.hideAll();"
                         type="button"
                         class="button icon-button icon-button--size-lg h-auto w-auto gap-3 px-2 py-3 text-primary-500 hover:bg-bg-600"
+                        aria-label="<?= __('Close menu') ?>"
+                        aria-controls="menu-desktop"
+                        :aria-expanded="$store.resizable.isVisible('menu-desktop')"
+                        :class="{'hidden': !$store.resizable.isVisible('menu-desktop')}"
                     >
                         <div class="contents">
                             <?= $hyvaicons->renderHtml('close'); ?>
                         </div>
-                        <span class="text-md font-bold"><?= __('Close') ?></span>
+                        <span class="text-md font-semibold"><?= __('Close') ?></span>
                     </button>
                 </template>
             <?php endif; ?>
 
             <button
                 @click="history.pop()"
+                type="button"
                 aria-label="<?= __('Go to back to previous menu page') ?>"
                 class="menu__back-button py-3 motion-reduce:max-md:animate-none"
-                :class="
-            {
-              'menu__back-button--visible max-md:animate-slideIconIn motion-reduce:translate-x-0': history.length !== 1,
-              'max-md:animate-slideIconOut motion-reduce:-translate-x-full': history.length == 1
-            }
-          "
+                :class="{
+                    'menu__back-button--visible max-md:animate-slideIconIn motion-reduce:translate-x-0': history.length !== 1,
+                    'max-md:animate-slideIconOut motion-reduce:-translate-x-full': history.length == 1
+                }"
                 :tab-index="history.length === 1 ? -1 : 0"
                 :aria-hidden="history.length === 1"
             >
@@ -77,52 +80,42 @@ if (!$menuItems) {
             <h2
                 class="menu__heading py-3 motion-reduce:max-md:animate-none"
                 style="--translate-width: 52px;"
-                :class="
-            {
-              'menu__heading--root': '{{ id }}' === 'all',
-              'max-md:animate-slideTitleIn motion-reduce:translate-x-[--translate-width]': history.length !== 1,
-              'max-md:animate-slideTitleOut motion-reduce:translate-x-0': history.length == 1
-            }
-          "
+                :class="{
+                    'menu__heading--root': '<?= $id ?>' === 'all',
+                    'max-md:animate-slideTitleIn motion-reduce:translate-x-[--translate-width]': history.length !== 1,
+                    'max-md:animate-slideTitleOut motion-reduce:translate-x-0': history.length == 1
+                }"
                 x-show="$store.main.isMobile || '<?= $id ?>' !== 'all'"
             >
                 <?= $title ?>
             </h2>
 
-            <div
-                id="menu-actions-<?= $id ?>"
-                class="md:flex-none md:flex-row"
-            ></div>
+            <div id="menu-actions-<?= $id ?>" class="md:mt-[6px] md:flex-none md:flex-row"></div>
         </div>
         <hr class="divider -mx-5 md:hidden">
     </div>
 
-    <ul
-        role="list"
-        class="menu__links"
-    >
+    <ul role="list" class="menu__links">
+        <?php $index = 0; ?>
         <?php foreach ($menuItems as $k => $menuItem): ?>
             <li>
                 <?php if (count($menuItem['childData'])): ?>
                     <button
-                        <?php if ($k === 0): ?>
-                            x-a11y-trap-target.initial="$store.resizable.isVisible('menu-desktop') && !$store.main.isMobile && history.length > 0 && history[history.length - 1] === '<?= $menuItem['id'] ?>'"
+                        <?php if ($index === 0): ?>
+                            x-a11y-trap-target.initial="$store.resizable.isVisible('menu-desktop') && !$store.main.isMobile && history.length > 0 && history[history.length - 1] === '<?= $id ?>'"
                         <?php endif; ?>
                         class="menu__link group"
-                        :class="{ 'menu__link--active': history.includes('<?= $menuItem['id'] ?>') }"
                         @click="setHistory([...'<?= $path ?>'.split(','), '<?= $menuItem['id'] ?>'])"
+                        :class="{ 'menu__link--active': history.includes('<?= $menuItem['id'] ?>') }"
                         role="button"
-                        :aria-expanded="history.includes('{{ link.handle }}')"
+                        :aria-expanded="history.includes('<?= $menuItem['id'] ?>')"
                     >
-        <span
-            class="link max-w-full truncate border-transparent transition-colors md:group-hover:border-b-1 md:group-hover:border-current md:group-hover:text-primary-600"
-        >
-          <?= $menuItem['name'] ?>
-        </span>
-                        <span
-                            class="text-xl transition-[color,transform] md:group-hover:-translate-x-3 md:group-hover:text-primary-600">
-          <?= $hyvaicons->renderHtml('chevron-right'); ?>
-        </span>
+                        <span class="link max-w-full truncate border-transparent transition-colors md:group-hover:border-b-1 md:group-hover:border-current md:group-hover:text-primary-600">
+                            <?= $menuItem['name'] ?>
+                        </span>
+                        <span class="text-xl transition-[color,transform] md:group-hover:-translate-x-3 md:group-hover:text-primary-600">
+                            <?= $hyvaicons->renderHtml('chevron-right'); ?>
+                        </span>
                     </button>
                     <template x-portal="document.getElementById('menu-sections')">
                         <?=
@@ -146,57 +139,42 @@ if (!$menuItems) {
                     </template>
                 <?php else: ?>
                     <a
-                        <?php if ($k === 0): ?>
-                            x-a11y-trap-target.initial="$store.resizable.isVisible('menu-desktop') && !$store.main.isMobile && history.length > 0 && history[history.length - 1] === '<?= $menuItem['id'] ?>'"
+                        <?php if ($index === 0): ?>
+                            x-a11y-trap-target.initial="$store.resizable.isVisible('menu-desktop') && !$store.main.isMobile && history.length > 0 && history[history.length - 1] === '<?= $id ?>'"
                         <?php endif; ?>
                         href="<?= $menuItem['url'] ?>"
                         role="link"
-                        x-element-transition-trigger:category="
-          {
-            'title': '<?= $menuItem['name'] ?>',
-            'url': '<?= $menuItem['url'] ?>',
-            'breadcrumbs': <?= $escaper->escapeHtmlAttr(json_encode($breadcrumbs)) ?>,
-            'img': '<?= $menuItem['image'] ?>',
-            'description': `<?= $escaper->escapeUrl($menuItem['description'] ?? '') ?>`,
-          }
-        "
+                        x-element-transition-trigger:category="{
+                            'title': '<?= $menuItem['name'] ?>',
+                            'url': '<?= $menuItem['url'] ?>',
+                            'breadcrumbs': <?= $escaper->escapeHtmlAttr(json_encode($breadcrumbs)) ?>,
+                            'img': '<?= $menuItem['image'] ?>',
+                            'description': `<?= $escaper->escapeUrl($menuItem['description'] ?? '') ?>`,
+                        }"
                         class="focus-visible:focus-ring group flex min-h-11 items-center justify-between py-1"
-                        :class="
-          {
-            'text-primary-500 font-bold': history.includes('<?= $menuItem['id'] ?>')
-          }
-        "
+                        :class="{
+                            'text-primary-500 font-semibold': history.includes('<?= $menuItem['id'] ?>')
+                        }"
                     >
-        <span
-            class="link max-w-full truncate border-transparent transition-colors md:group-hover:border-b-1 md:group-hover:border-current md:group-hover:text-primary-600"
-        >
-          <?= $menuItem['name'] ?>
-        </span>
+                        <span
+                            class="link max-w-full truncate border-transparent transition-colors md:group-hover:border-b-1 md:group-hover:border-current md:group-hover:text-primary-600"
+                        >
+                            <?= $menuItem['name'] ?>
+                        </span>
                     </a>
                 <?php endif; ?>
             </li>
+            <?php $index++; ?>
         <?php endforeach; ?>
     </ul>
 
-    <div
-        class="w-full bg-bg-500 px-2 md:px-4 pb-2 md:w-[--menu-width] md:rounded-md md:pb-3 md:mt-8 absolute md:static bottom-[8px] right-0 left-0"
-        :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'menu' : !$store.resizable.isVisible('menu-desktop')"
-        x-show="(!$store.main.isMobile && '<?= $id ?>' === 'all') || ($store.popup.currentPopup == 'menu' && history[history.length - 1] === 'all' && !getIsSearchActive())"
-    >
-        <a x-element-transition-trigger
-           class="button button--filled-primary w-full"
-           x-a11y-trap-target.end="$store.popup.currentPopup === 'menu' && history.length === 1"
-           :href="$store.main.isUserLoggedIn ? '/customer/account/index' : '/customer/account/login'"
-           x-text="$store.main.isUserLoggedIn ? '<?= __('My account') ?>' : '<?= __('Login / Signup') ?>'"
-        ></a>
-    </div>
-
+    <div class="h-20 md:hidden"></div>
     <?php if ($url && $id !== 'all'): ?>
         <template
             x-portal="$store.main.isMobile ? document.getElementById('popup-fixed-content-portal') : document.getElementById('menu-actions-<?= $id ?>')"
         >
             <div
-                class="bg-bg-500 px-4 pb-2 md:bg-transparent md:hover:text-primary-600"
+                class="bg-bg-500 px-4 pb-2 transition-colors duration-200 md:bg-transparent md:hover:text-primary-600"
                 x-transition.opacity
                 x-show="$store.main.isMobile ? history[history.length - 1] === '<?= $id ?>' && !getIsSearchActive() : history.includes('<?= $id ?>')"
                 role="link"
@@ -208,21 +186,38 @@ if (!$menuItems) {
                     x-a11y-trap-target.end="$store.popup.currentPopup === 'menu' && history.length !== 1 && history[history.length - 1] === '<?= $id ?>'"
                 >
                     <template x-if="$store.main.isMobile">
-          <span>
-            <?= __('View All') ?> <span class="lowercase"><?= $title ?></span>
-          </span>
+                        <span><?= __('View All') ?> <span class="lowercase"><?= $title ?></span></span>
                     </template>
                     <template x-if="!$store.main.isMobile">
-          <span class="flex items-center">
-            <span class='border-b-1 border-current'>
-              <?= __('View all') ?>
-            </span>
-            <span class='ps-2'>
-              <?= $hyvaicons->renderHtml('menu-view-all'); ?>
-            </span>
-          </span>
+                        <span class="flex items-center">
+                            <span class='border-b-1 border-current'>
+                                <?= __('View all') ?>
+                            </span>
+                            <span class='ps-2'>
+                                <?= $hyvaicons->renderHtml('menu-view-all'); ?>
+                            </span>
+                        </span>
                     </template>
                 </a>
+            </div>
+        </template>
+    <?php endif; ?>
+
+    <?php if ($id === 'all'): ?>
+        <div class="md:mt-[88px]"></div>
+        <template x-portal="$store.main.isMobile ? document.getElementById('popup-fixed-content-portal') : document.getElementById('menu-desktop-fixed')">
+            <div
+                class="w-full bg-bg-500 px-4 pb-2 md:w-[--menu-width] md:rounded-md md:pb-4"
+                :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'menu' : !$store.resizable.isVisible('menu-desktop')"
+                x-show="!$store.main.isMobile || ($store.popup.currentPopup == 'menu' && history[history.length - 1] === '<?= $id ?>' && !getIsSearchActive())"
+            >
+                <a
+                    x-element-transition-trigger
+                    :href="$store.main.isUserLoggedIn ? '/customer/account/index' : '/customer/account/login'"
+                    class="button button--filled-primary w-full"
+                    x-text="$store.main.isUserLoggedIn ? '<?= __('My account') ?>' : '<?= __('Login / Signup') ?>'"
+                    x-a11y-trap-target.end="$store.popup.currentPopup === 'menu' && history.length === 1"
+                ></a>
             </div>
         </template>
     <?php endif; ?>
