INTERNAL-346: Move store data to ProductPage and WIshlist store

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/product-detail-page.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/product-detail-page.phtml
@@ -18,7 +18,7 @@ if ($product->getTypeId() === 'grouped') {
 
 <section
   class="product-page"
-  x-data="ProductPage()"
+  x-data="ProductPage('<?= $product->getSku() ?>')"
 >
   <div
     x-init="
