Fix FAQ question text align

--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/faq.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/faq.phtml
@@ -34,7 +34,7 @@ $id = uniqid();
                         aria-labelledby="<?= $escaper->escapeHtmlAttr($id) ?>_label"
                         type="button"
                     >
-                        <h2 class="grow text-start text-lg font-semibold" id="<?= $escaper->escapeHtmlAttr($id) ?>_label">
+                        <h2 class="grow text-lg font-semibold" id="<?= $escaper->escapeHtmlAttr($id) ?>_label">
                             <?= $escaper->escapeHtml($faq['question']) ?>
                         </h2>
                         <div
