--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/image-with-text.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/image-with-text.phtml
@@ -32,21 +32,23 @@ $appearance = $block->getData('appearance');
     <?php endif; ?>
 
     <div class="flex flex-col items-start gap-5 md:gap-7 md:py-12 md:pl-12 md:self-center w-full" style="<?= $appearance === 'text-first' ? 'order: -1' : '' ?>">
-        <h2 class="heading text-3xl text-text-500 md:text-4xl"><?= $escaper->escapeHtml($block->getData('heading')) ?></h2>
+        <h2 class="heading text-3xl text-text-500 md:text-4xl w-full"><?= $escaper->escapeHtml($block->getData('heading')) ?></h2>
         <div><?= $block->getData('description') ?></div>
 
-        <a
-            <?php if ($linkHref): ?>
-                href="<?= $escaper->escapeUrl($linkHref); ?>"
-                target="<?= $escaper->escapeHtmlAttr($linkHelper->getLinkTarget($link_url)); ?>"
-            <?php endif; ?>
-            class="button button--filled-primary"
-            x-element-transition-trigger
-        >
-            <?= $escaper->escapeHtml($block->getData('button_label')) ?>
-            <span class="button__icon ml-2">
-                <?= $hyvaicons->renderHtml('button-link'); ?>
-            </span>
-        </a>
+        <div class="w-full">
+            <a
+                <?php if ($linkHref): ?>
+                    href="<?= $escaper->escapeUrl($linkHref); ?>"
+                    target="<?= $escaper->escapeHtmlAttr($linkHelper->getLinkTarget($link_url)); ?>"
+                <?php endif; ?>
+                class="button button--filled-primary"
+                x-element-transition-trigger
+            >
+                <?= $escaper->escapeHtml($block->getData('button_label')) ?>
+                <span class="button__icon ml-2">
+                    <?= $hyvaicons->renderHtml('button-link'); ?>
+                </span>
+            </a>
+        </div>
     </div>
 </div>
