--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
@@ -329,9 +329,7 @@ $cartMessage = $block->getCartMessage();
     >
       <?= __('Show product') ?>
     </a>
-        <?=
-        $template->render('Magento_Catalog::product/view/addtowishlist.phtml')
-        ?>
+        <?= $template->render('Magento_Catalog::product/view/addtowishlist.phtml') ?>
   </div>
 </div>
 
